BLL - Autofac impl.

--- a/NetCoreBackend.BLL/NetCoreBackend.BLL.csproj
+++ b/NetCoreBackend.BLL/NetCoreBackend.BLL.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="5.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\NetCoreBackend.DAL\NetCoreBackend.DAL.csproj" />
     <ProjectReference Include="..\NetCoreBackend.Entities\NetCoreBackend.Entities.csproj" />
   </ItemGroup>
