WebAPI - Autofac impl.

--- a/NetCoreBackend.WebAPI/NetCoreBackend.WebAPI.csproj
+++ b/NetCoreBackend.WebAPI/NetCoreBackend.WebAPI.csproj
@@ -4,5 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NetCoreBackend.BLL\NetCoreBackend.BLL.csproj" />
+  </ItemGroup>
+
 
 </Project>
