startup configuration & bug fix

--- a/NetCoreBackend.WebAPI/appsettings.json
+++ b/NetCoreBackend.WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "www.google.com",
+    "Issuer": "www.google.com",
+    "AccessTokenExpiration": 5,
+    "SecurityKey": "mysecretkeymysecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
