--- a/NetCoreBackend.Core/NetCoreBackend.Core.csproj
+++ b/NetCoreBackend.Core/NetCoreBackend.Core.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Serilog" Version="2.9.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+    <PackageReference Include="serilog.sinks.graylog" Version="2.1.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.0" />
   </ItemGroup>
 
