--- a/NetCoreBackend.UnitTests/NetCoreBackend.UnitTests.csproj
+++ b/NetCoreBackend.UnitTests/NetCoreBackend.UnitTests.csproj
@@ -7,10 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extras.Moq" Version="5.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Moq" Version="4.14.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NetCoreBackend.BLL\NetCoreBackend.BLL.csproj" />
+    <ProjectReference Include="..\NetCoreBackend.DAL\NetCoreBackend.DAL.csproj" />
   </ItemGroup>
 
 </Project>
